<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HandleMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textViewHoneyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/honey_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewHoneyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="90sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_reset" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0.5dp">

                    <TextView
                        android:id="@+id/textViewTowerDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.75"
                        android:text="@string/tower_description"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewTowersRemaining"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/tower_cost"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewTowerBuild"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="6"
                        android:gravity="center"
                        android:text="@string/tower_build"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0.5dp">

                    <TextView
                        android:id="@+id/leafcutter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:text="@string/leafcutter_ant"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textViewLeafcutterValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <Button
                        android:id="@+id/buttonSub1"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/sub_1"
                        android:textAllCaps="false" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0.5dp">

                    <TextView
                        android:id="@+id/bullet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:text="@string/bullet_ant"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textViewBulletValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <Button
                        android:id="@+id/buttonSub2"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/sub_2"
                        android:textAllCaps="false" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0.5dp">

                    <TextView
                        android:id="@+id/fire"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:text="@string/fire_ant"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textViewFireValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <Button
                        android:id="@+id/buttonSub4"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/sub_4"
                        android:textAllCaps="false" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0.5dp">

                    <TextView
                        android:id="@+id/electric"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:text="@string/electric_ant"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textViewElectricValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <Button
                        android:id="@+id/buttonSub5"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/sub_5"
                        android:textAllCaps="false" />
                </TableRow>
            </TableLayout>
        </ScrollView>

        <Button
            android:id="@+id/buttonToTurnCounter"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/turn_counter"
            android:layout_gravity="bottom"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>