<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_screen_info"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/edit_text_info"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/buttonEnter"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enter" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>