<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TurnCounter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewUpdateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_title"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewUpdateInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textViewUpdateInfo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewTurnInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="@string/turn_info"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTurnCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="200sp"/>

        <Button
            android:id="@+id/buttonNextTurn"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/next_turn_button" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>